# MemoGL

./: .gitmodules  CMakeLists.txt  Main.cpp  README.md  main.cpp
cmake/: macros.cmake
res/shaders/: basic.vert  font.frag  green.frag  plaincolor.frag  red.frag  texture2d.frag  texture2d.vert  vertexcolor.frag  vertexcolor.vert
src/: CMakeLists.txt  GameEngine.cpp  GameEngine.h  IGameEngine.h  MemoGL.cpp  MemoGL.h  pch.h
src/components/: Transform.cpp  Transform.h
src/entity/: Demo.h  Entity.cpp  Entity.h  EntityStack.cpp  EntityStack.h  Object.cpp  Object.h  Scene.h  SceneManager.cpp  SceneManager.h
src/entity/buttons/: Button.cpp  Button.h
src/entity/demos/: BasicSceneDemo.cpp  BasicSceneDemo.h  BasicTextureDemo.cpp  BasicTextureDemo.h  ButtonSceneDemo.cpp  ButtonSceneDemo.h  ClearColorDemo.cpp  ClearColorDemo.h  FontSceneDemo.cpp  FontSceneDemo.h  MenuDemo.cpp  MenuDemo.h
src/entity/shapes/: ColorRectangle.cpp  ColorRectangle.h  Rectangle.cpp  Rectangle.h
src/entity/sprite/: Sprite.cpp  Sprite.h
src/entity/texts/: Line.cpp  Line.h  Text.cpp  Text.h  Word.cpp  Word.h
src/events/: ApplicationEvents.h  Event.h  GamepadCodes.h  KeyBoardEvents.h  KeyCodes.h  MouseCodes.h  MouseEvents.h  WindowEvents.h  WindowsEvent.h
src/events/inputs/: GLFWInput.cpp  GLFWInput.h  Input.h
src/graphics/: IGraphicsEngine.h
src/graphics/buffer/: Shader.h  Texture.h  Vertex2D.h  VertexArray.h
src/graphics/context/: IContext.h  IWindow.h
src/graphics/context/GLFW/: GLFWContext.cpp  GLFWContext.h  WindowGLFW.cpp  WindowGLFW.h
src/graphics/entity/: Demo.h  Entity.h  Object.cpp  Object.h  Shader.h
src/graphics/entity/demos/: BasicTextureDemo.cpp  BasicTextureDemo.h  ClearColorDemo.cpp  ClearColorDemo.h  MenuDemo.cpp  MenuDemo.h
src/graphics/rasterization/: RasterizationEngine.cpp  RasterizationEngine.h
src/graphics/renderer/: IRenderer.h  IWindow.h
src/graphics/renderer/OpenGL/: OpenGLError.cpp  OpenGLError.h  OpenGLRenderer.cpp  OpenGLRenderer.h
src/graphics/renderer/OpenGL/buffer/: OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  OpenGLVertexLayout.h
src/graphics/renderer/OpenGL/imgui/: OpenGLImGui.cpp  OpenGLImGui.h  imgui_build.cpp
src/graphics/renderer/OpenGL/shader/: OpenGLShader.cpp  OpenGLShader.h
src/graphics/renderer/OpenGL/texture/: OpenGLTexture.cpp  OpenGLTexture.h
src/graphics/renderer/OpenGL/versions/: IOpenGLVersion.h  OpenGL3.cpp  OpenGL3.h  OpenGL4.cpp  OpenGL4.h
src/graphics/renderer/OpenGL3_3/: OpenGL33Error.cpp  OpenGL33Error.h  OpenGL33Renderer.cpp  OpenGL33Renderer.h  OpenGL33Window.cpp  OpenGL33Window.h
src/graphics/renderer/OpenGL4/: OpenGL4Error.cpp  OpenGL4Error.h  OpenGL4Renderer.cpp  OpenGL4Renderer.h  OpenGL4Window.cpp  OpenGL4Window.h
src/graphics/renderer/OpenGL_Legacy/: OpenGLLegacyRenderer.cpp  OpenGLLegacyRenderer.h  OpenGLLegacyWindow.cpp  OpenGLLegacyWindow.h
src/graphics/text/: Character.h  Font.cpp  Font.h  FontLoader.h  FreetypeLoader.cpp  Glyph.cpp  Glyph.h
src/layers/: ExampleLayer.cpp  ExampleLayer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
src/platform/: CMakeLists.txt
src/platform/apple/: AppleContext.cpp  AppleInput.cpp
src/platform/windows/: WindowsContext.cpp
src/test/: CMakeLists.txt  test1.cpp
src/tools/: ColorStructs.h  CommonMacros.h  File.cpp  File.h  Log.cpp  Log.h
